--- a/index.html
+++ b/index.html
@@ -1,1 +1,419 @@
-<h1>Clash Hello</h1>
+<!DOCTYPE html>
+<html lang="zh-CN">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clash节点-Clash订阅-Clash机场</title>
+    <meta name="description" content="Clash订阅节点库每日更新300+优质线路，用户通过Clash订阅测速面板可对比各节点响应速度。平台提供Clash订阅故障转移功能，当检测到连接超时自动切换备用通道，关键业务稳定性提升95%。（关键词：Clash订阅节点库 / Clash订阅测速面板 / Clash订阅故障转移）
+">
+    <meta name="keywords" content="Clash节点,Clash订阅,Clash机场">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Nunito:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico">
+    <style>
+        :root {
+            --pink: #ff7eb4;
+            --blue: #6eb5ff;
+            --purple: #b28dff;
+            --bg-gradient: linear-gradient(135deg, var(--pink) 0%, var(--blue) 100%);
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Nunito', 'Comic Neue', cursive;
+        }
+
+        body {
+            background: #f9f5ff;
+        }
+
+        /* 动漫风格导航 */
+        .kawaii-nav {
+            padding: 1.5rem 5%;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            background: rgba(255,255,255,0.95);
+            backdrop-filter: blur(10px);
+            border-bottom: 3px solid var(--pink);
+        }
+
+        .nav-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo {
+            font-family: 'Comic Neue', cursive;
+            font-size: 2.2rem;
+            color: var(--purple);
+            text-shadow: 2px 2px 0px rgba(178,141,255,0.2);
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 2rem;
+        }
+
+        .nav-links a {
+            color: #666;
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            transition: all 0.3s;
+            position: relative;
+        }
+
+        .nav-links a:hover {
+            color: var(--pink);
+            transform: translateY(-2px);
+        }
+
+        .nav-links a::after {
+            content: '☆';
+            position: absolute;
+            right: -10px;
+            top: -5px;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        .nav-links a:hover::after {
+            opacity: 1;
+        }
+
+        /* 全屏动漫Banner */
+        .anime-banner {
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            padding: 120px 5% 0;
+            background: var(--bg-gradient);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .banner-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            position: relative;
+            z-index: 1;
+        }
+
+        .banner-text {
+            max-width: 600px;
+        }
+
+        .banner-text h1 {
+            font-family: 'Comic Neue', cursive;
+            font-size: 4rem;
+            color: white;
+            line-height: 1.2;
+            margin-bottom: 1.5rem;
+            text-shadow: 3px 3px 0px rgba(0,0,0,0.1);
+        }
+
+        .banner-text p {
+            color: rgba(255,255,255,0.9);
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+        }
+
+        /* 萌系按钮 */
+        .moe-button {
+            display: inline-block;
+            padding: 1rem 2.5rem;
+            background: white;
+            border-radius: 30px;
+            text-decoration: none;
+            color: var(--pink);
+            font-weight: bold;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            transition: all 0.3s;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .moe-button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                90deg,
+                transparent,
+                rgba(255,255,255,0.4),
+                transparent
+            );
+            transition: 0.5s;
+        }
+
+        .moe-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+        }
+
+        .moe-button:hover::before {
+            left: 100%;
+        }
+
+        /* 功能展示区 */
+        .features-section {
+            padding: 6rem 5%;
+            background: white;
+        }
+
+        .floating-cards {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .feature-card {
+            background: #fff;
+            padding: 2rem;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(255,126,180,0.1);
+            transition: transform 0.3s;
+            text-align: center;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .card-icon {
+            width: 80px;
+            height: 80px;
+            background: var(--bg-gradient);
+            border-radius: 50%;
+            margin: 0 auto 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 2rem;
+        }
+
+        /* 角色介绍区 */
+        .character-section {
+            padding: 6rem 5%;
+            background: #f9f5ff;
+        }
+
+        .character-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 4rem;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .character-image {
+            text-align: center;
+        }
+
+        .character-image img {
+            max-width: 100%;
+            height: auto;
+            filter: drop-shadow(0 10px 20px rgba(0,0,0,0.1));
+        }
+
+        /* 价格套餐 */
+        .price-section {
+            padding: 6rem 5%;
+            background: white;
+        }
+
+        .price-cards {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            flex-wrap: wrap;
+        }
+
+        .price-card {
+            background: #fff;
+            padding: 2rem;
+            border-radius: 20px;
+            width: 300px;
+            text-align: center;
+            position: relative;
+            border: 3px solid transparent;
+            transition: all 0.3s;
+        }
+
+        .price-card:hover {
+            border-color: var(--pink);
+        }
+
+        .price-tag {
+            font-size: 2.5rem;
+            color: var(--purple);
+            margin: 1rem 0;
+        }
+
+        /* 下载区域 */
+        .download-section {
+            padding: 6rem 5%;
+            background: var(--bg-gradient);
+            text-align: center;
+        }
+
+        .platform-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            margin-top: 3rem;
+        }
+
+        .platform-button {
+            background: white;
+            padding: 1.5rem 3rem;
+            border-radius: 15px;
+            text-decoration: none;
+            color: var(--pink);
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            transition: transform 0.3s;
+        }
+
+        .platform-button:hover {
+            transform: scale(1.05);
+        }
+
+        /* 响应式设计 */
+        @media (max-width: 768px) {
+            .nav-links {
+                display: none;
+            }
+
+            .banner-text h1 {
+                font-size: 2.5rem;
+            }
+
+            .character-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <nav class="kawaii-nav">
+        <div id="si0KTAtoft" class="nav-content">
+            <div id="6WXqbJzgmA" class="logo">clash节点</div>
+            <div id="D00yaFPoLS" class="nav-links">
+                <a href="#home">首页</a>
+                <a href="#features">功能</a>
+                <a href="#price">套餐</a>
+                <a href="#download">下载</a>
+            </div>
+        </div>
+    </nav>
+    <section class="anime-banner" id="home">
+        <div id="teNOLcBJO5" class="banner-content">
+            <div id="IPpJT4GtAB" class="banner-text">
+                <h1>开启你的二次元极速之旅！</h1>
+                <p>专为ACG爱好者打造的超萌加速器，全球节点智能匹配，告别卡顿延迟</p>
+                <a href="#" onclick="location.href='https://china-vpn.cc'" class="moe-button">立即注册体验</a>
+            </div>
+        </div>
+    </section>
+    <section class="features-section" id="features">
+        <div id="0s7OeVfgf4" class="floating-cards">
+            <div id="yzxblwCxSk" class="feature-card">
+                <div id="wo96GvigBc" class="card-icon">
+                    <i class="fas fa-gamepad"></i>
+                </div>
+                <h3>游戏加速</h3>
+                <p>专线优化降低延迟，助你轻松超神</p>
+            </div>
+            <div id="rL3PM5ni4K" class="feature-card">
+                <div id="Oo9MvP82RN" class="card-icon">
+                    <i class="fas fa-bolt"></i>
+                </div>
+                <h3>极速传输</h3>
+                <p>下载速度提升300%，追番更流畅</p>
+            </div>
+            <div id="XiFHqVp7Nq" class="feature-card">
+                <div id="oaxJp9PY4Y" class="card-icon">
+                    <i class="fas fa-shield-alt"></i>
+                </div>
+                <h3>安全防护</h3>
+                <p>守护你的二次元世界</p>
+            </div>
+        </div>
+    </section>
+    <section class="character-section">
+        <div id="ZNMUf2AiYS" class="character-grid">
+            <div id="xxGg3onn5n" class="character-image">
+                <!-- 此处可添加动漫角色图片 -->
+                <img src="https://img2.baidu.com/it/u=1012216794,3475160259&fm=253&fmt=auto&app=120&f=JPEG?w=800&h=1067" alt="萌娘形象">
+            </div>
+            <div id="ogWteSEkJ6" class="character-info">
+                <h2>专属虚拟助手</h2>
+                <p>智能AI助手随时待命，提供个性化加速建议和网络优化方案</p>
+                <a href="#features" class="moe-button">查看功能</a>
+            </div>
+        </div>
+    </section>
+    <section class="price-section" id="price">
+        <h2 class="section-title">超值套餐</h2>
+        <div id="PPDvCefNgL" class="price-cards">
+            <div id="2de9hMjsF9" class="price-card">
+                <h3>萌新套餐</h3>
+                <div id="UljcYJIUTt" class="price-tag">¥19</div>
+                <ul>
+                    <li>基础加速功能</li>
+                    <li>100+ 全球节点</li>
+                    <li>3 设备支持</li>
+                </ul>
+                <a href="#" class="moe-button mt-2">立即订购</a>
+            </div>
+            <div id="WKAkCYmHDt" class="price-card">
+                <h3>大佬套餐</h3>
+                <div id="gyTvqPOWPD" class="price-tag">¥29</div>
+                <ul>
+                    <li>全功能解锁</li>
+                    <li>无限流量</li>
+                    <li>5 设备支持</li>
+                </ul>
+                <a href="#" onclick="location.href='https://china-vpn.cc'" class="moe-button mt-2">立即订购</a>
+            </div>
+        </div>
+    </section>
+    <section class="download-section" id="download">
+        <h2 style="color: white;">立即下载客户端</h2>
+        <div id="WKpQtph4Vd" class="platform-buttons">
+            <a href="#" class="platform-button">
+                <i class="fab fa-windows"></i>
+                Windows
+            </a>
+            <a href="#" class="platform-button">
+                <i class="fab fa-apple"></i>
+                macOS
+            </a>
+            <a href="#" class="platform-button">
+                <i class="fab fa-android"></i>
+                Android
+            </a>
+        </div>
+    </section>
+    <a href="/sitemap.xml">SiteMap</a>
+</body>
+
+</html> clashforwin节点 节点 clash clash 节点github clash节点什么意思 clash节点搭建 clash节点失效 clash节点url clash免费节点文件 clash节点timeout clash for windows节点怎么获取
